Fix alignment of navbar

--- a/css/styles.css
+++ b/css/styles.css
@@ -66,7 +66,7 @@ a.top:hover {
 }
 
 a.projects {
-  display: inline;
+  width: auto;
   text-align: left;
   border: none;
 }
